@@ -1,8 +1,11 @@
 # ChangeLog for Gentoo Linux Installer
 # Copyright 2004 Gentoo Technologies, Inc.
-# $Header: /var/cvsroot/gentoo/src/installer/src/fe/gtk/ChangeLog,v 1.172 2005/09/23 02:01:25 agaffney Exp $
+# $Header: /var/cvsroot/gentoo/src/installer/src/fe/gtk/ChangeLog,v 1.173 2005/10/05 20:13:16 agaffney Exp $
 
 *GLI-gtkfe-0.2 (13 Aug 2005)
+
+  5 Oct 2005; Andrew Gaffney <agaffney@gentoo.org>
+  fix all calls to get_active_text() in URIBrowser.py
 
   22 Sep 2005; Andrew Gaffney <agaffney@gentoo.org>
   move 'Recommended layout' button up to top
